[metadata]
name = VoiceFragment
description = A discord bot that creates temporary voice channels upon joining.
long_description = file: README.md
author = Mojtaba Alkhalifah
license_file = LICENSE

[options]
install_requires =
    python-dotenv>=0.17.1
    discord.py>=1.7.2
    peewee>=3.14.4
python_requires = >=3.9